Use `List#getFirst()`