@@ -91,7 +91,7 @@ public class ShapelessPageBuilder extends PageBuilder {
         List<RecipeChoice> shapeless = plugin.getIncomposita().getShapelessRecipes().get(item).getChoiceList();
         for (RecipeChoice choice : shapeless) {
             if (choice instanceof RecipeChoice.MaterialChoice mat) {
-                dashed = TARDISStringUtils.toLowercaseDashed(TARDISStringUtils.capitalise(mat.getChoices().get(0).toString()));
+                dashed = TARDISStringUtils.toLowercaseDashed(TARDISStringUtils.capitalise(mat.getChoices().getFirst().toString()));
             }
             if (choice instanceof RecipeChoice.ExactChoice exact) {
                 ItemStack is = exact.getItemStack();
