@@ -149,8 +149,8 @@ public class TARDISGiveCommand implements CommandExecutor {
                         player = (Player) sender;
                     } else if (args[0].equals("@p")) {
                         List<Entity> near = Bukkit.selectEntities(sender, "@p");
-                        if (!near.isEmpty() && near.get(0) instanceof Player) {
-                            player = (Player) near.get(0);
+                        if (!near.isEmpty() && near.getFirst() instanceof Player) {
+                            player = (Player) near.getFirst();
                             if (player == null) {
                                 plugin.getMessenger().send(sender, TardisModule.TARDIS, "COULD_NOT_NEARBY_PLAYER");
                                 return true;
