@@ -52,7 +52,7 @@ public class TARDISHorseListener implements Listener {
         Entity e = event.getEntity();
         if (e instanceof AbstractHorse h && !(e instanceof Llama)) {
             Material m = event.getBlock().getType();
-            Entity passenger = (!h.getPassengers().isEmpty()) ? h.getPassengers().get(0) : null;
+            Entity passenger = (!h.getPassengers().isEmpty()) ? h.getPassengers().getFirst() : null;
             if (passenger != null && m.equals(Material.OAK_PRESSURE_PLATE)) {
                 if (passenger instanceof Player p) {
                     String pworld = p.getLocation().getWorld().getName();
