@@ -81,7 +81,7 @@ public class TARDISSonicScanner {
                             }
                         }
                     }
-                    if (et.equals(EntityType.SKELETON) && !k.getPassengers().isEmpty() && k.getPassengers().get(0) != null && k.getPassengers().get(0).getType().equals(EntityType.GUARDIAN)) {
+                    if (et.equals(EntityType.SKELETON) && !k.getPassengers().isEmpty() && k.getPassengers().getFirst() != null && k.getPassengers().getFirst().getType().equals(EntityType.GUARDIAN)) {
                         // silent
                         et = EntityType.POTION;
                     }
