@@ -121,14 +121,14 @@ public class ToclafaneListener implements Listener {
             }
         } else if (entity instanceof Bee bee) {
             if (!entity.getPassengers().isEmpty()) {
-                Entity passenger = entity.getPassengers().get(0);
+                Entity passenger = entity.getPassengers().getFirst();
                 if (passenger instanceof ArmorStand && passenger.getPersistentDataContainer().has(TARDISWeepingAngels.TOCLAFANE, PersistentDataType.INTEGER)) {
                     bee.setHasStung(false);
                 }
             }
         } else if (entity instanceof Player player && damager instanceof Bee bee) {
             if (!damager.getPassengers().isEmpty()) {
-                Entity passenger = damager.getPassengers().get(0);
+                Entity passenger = damager.getPassengers().getFirst();
                 if (passenger instanceof ArmorStand && passenger.getPersistentDataContainer().has(TARDISWeepingAngels.TOCLAFANE, PersistentDataType.INTEGER)) {
                     bee.setHasStung(false);
                     bee.setHealth(bee.getAttribute(Attribute.GENERIC_MAX_HEALTH).getValue());
@@ -144,7 +144,7 @@ public class ToclafaneListener implements Listener {
         if (entity instanceof Bee bee) {
             if (bee.getTarget() instanceof Player || bee.getAnger() >= 0) {
                 if (!bee.getPassengers().isEmpty()) {
-                    Entity passenger = bee.getPassengers().get(0);
+                    Entity passenger = bee.getPassengers().getFirst();
                     if (passenger instanceof ArmorStand && passenger.getPersistentDataContainer().has(TARDISWeepingAngels.TOCLAFANE, PersistentDataType.INTEGER)) {
                         bee.setHasStung(false);
                     }
