@@ -141,7 +141,7 @@ public class MonstersConfig {
         }
         // set angels.teleport_locations to world spawn
         if (!config.contains("angels.teleport_locations")) {
-            Location location = plugin.getServer().getWorlds().get(0).getSpawnLocation();
+            Location location = plugin.getServer().getWorlds().getFirst().getSpawnLocation();
             String spawn = location.getWorld().getName()+","+location.getBlockX()+","+location.getBlockY()+","+location.getBlockZ();
             List<String> list = List.of(spawn);
             plugin.getMonstersConfig().set("angels.teleport_locations", list);
